@@ -368,17 +368,17 @@ unsigned char COpenZWave::GetInstanceFromValueID(const OpenZWave::ValueID vID)
 	else
 	{
 		instance = vInstance;
-		if (commandClass == COMMAND_CLASS_SWITCH_MULTILEVEL)
-		{
-			unsigned char rIndex = vInstance;
-			if (rIndex != vIndex)
-			{
-				if (vInstance == 1)
-				{
-					instance = vIndex;
-				}
-			}
-		}
+		//if (commandClass == COMMAND_CLASS_SWITCH_MULTILEVEL)
+		//{
+		//	unsigned char rIndex = vInstance;
+		//	if (rIndex != vIndex)
+		//	{
+		//		if (vInstance == 1)
+		//		{
+		//			instance = vIndex;
+		//		}
+		//	}
+		//}
 	}
 
 	return instance;
@@ -1210,7 +1210,7 @@ void COpenZWave::AddValue(const OpenZWave::ValueID vID)
 				_device.devType = ZDTYPE_SWITCH_DIMMER;
 				_device.intvalue = byteValue;
 				InsertDevice(_device);
-				if (instance == 1)
+				if (instance == 0)
 				{
 					if (IsNodeRGBW(HomeID, NodeID))
 					{
